Tasks panel alignment fix.

--- a/src/SFA.DAS.EAS.Web/src/sass/_custom.scss
+++ b/src/SFA.DAS.EAS.Web/src/sass/_custom.scss
@@ -625,7 +625,16 @@ body {
     display:none;
 }
 
-
+#page-company-homepage{
+    #pane-tasks{
+        .button-link{
+          text-align:left;
+          padding:0;
+          margin-top:10px;
+          
+        }
+    }
+}
 
 //all mobile media query breakpoints
 //==================================
